--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
-fastapi
-uvicorn[standard]
-pydantic
-openai
-python-dotenv
-python-multipart
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.6.15
+click==8.2.1
+distro==1.9.0
+fastapi==0.115.13
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+jiter==0.10.0
+openai==1.90.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.1.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+sniffio==1.3.1
+starlette==0.46.2
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uvicorn==0.34.3
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
