Adds PostgreSQL integration and Excel export functionality
Implements a PostgreSQL connection and models for content storage, allowing generated content to be saved and retrieved efficiently.

Introduces an Excel export feature to facilitate content analysis, enhancing the application's usability for content management tasks.

Updates environment configuration to support new database settings and includes necessary dependencies in the requirements file.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4o-mini
-PORT=8000
+OPENAI_API_KEY = your_openai_api_key_here
+OPENAI_MODEL = gpt-4o-mini
+PORT = 8000
+
+# Content Database Configuration
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = password
+POSTGRES_DB = db_name
+POSTGRES_HOST = host_name_or_ip
+POSTGRES_PORT = 5432 # Default PostgreSQL port
